--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,24 +1,25 @@
 name: Hello world workflow
+
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+	push:
+ 		branches:
+	 		- main
+		pull_request:
+			- main
+	 	workflow_dispatch:
 
 jobs:
-  hello:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: hello world
-        run: echo "Hello world"
-	shell: bash
-  goodbye:
-    runs-on: ubuntu-latest
-    steps:
-      - name: goodby world
-        run: echo "Goodbye world"
-	shell: bash
+	hello:
+ 		runs-on: ubuntu-latest
+	 	steps:
+	 		- uses: actions/checkout@v2
+			- name: hello world
+	 			run: echo "Hello world"
+		 		shell: bash
+
+ 	goodbye:
+ 		runs-on: ubuntu-latest
+	 	steps: 
+	 		- name: goodbye world
+				run: echo "Goodbye world"
+				shell: bash
