--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -1,4 +1,5 @@
 name: Hello world workflow
+
 on:
   push:
     branches:
@@ -10,15 +11,16 @@ on:
 
 jobs:
   hello:
-    runs-on: ubuntu-latest
+    runs_on: ubuntu_latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world
         run: echo "Hello world"
-	shell: bash
+        shell: bash
+
   goodbye:
-    runs-on: ubuntu-latest
+    runs_on: ubuntu_latest
     steps:
-      - name: goodby world
+      - name: goodbye world
         run: echo "Goodbye world"
-	shell: bash
+        shell: bash
