--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   hello:
-    runs_on: ubuntu_latest
+    runs-on: ubuntu_latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world
@@ -19,7 +19,7 @@ jobs:
         shell: bash
 
   goodbye:
-    runs_on: ubuntu_latest
+    runs-on: ubuntu_latest
     steps:
       - name: goodbye world
         run: echo "Goodbye world"
