--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -9,13 +9,13 @@ on:
       runs-on: ubuntu-latest
       steps:
         - name: Create comment
-        uses: peter-evans/create-or-update-comment@v3
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown** :sparkles:
-            - Created by [create-or-update-comment][1]
+          uses: peter-evans/create-or-update-comment@v3
+          with:
+            issue-number: ${{ github.event.issue.number }}
+            body: |
+              This is a multi-line test comment
+              - With GitHub **Markdown** :sparkles:
+              - Created by [create-or-update-comment][1]
 
-            [1]: https://github.com/peter-evans/create-or-update-comment
-          reactions: '+1'
+              [1]: https://github.com/peter-evans/create-or-update-comment
+            reactions: "+1"
